Repo // Disable LiquidGlass for now.
- This policy is effective until `UIDesignRequiresCompatibility` gets deprecated by Apple.

--- a/ThePizzaHelper/Info.plist
+++ b/ThePizzaHelper/Info.plist
@@ -48,7 +48,7 @@
 		<string>fetch</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
-	<false/>
+	<true/>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIImageName</key>
