--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -73,13 +73,11 @@ custom_rules:
 
 excluded:
   - .git**
-  - Packages/Build/**
-  - Build/**
-  - "**/.build/**"
-  - "**/.index-build/**"
-  - "**/resource_bundle_accessor.swift"
-  - Packages/**/.build/**
+  - Packages/Build
+  - Build
+  - .build
+  - .index-build
+  - resource_bundle_accessor.swift
   - resource_bundle_accessor.swift
   - Pods
   - R.generated.swift
-  - .build # Where Swift Package Manager checks out dependency sources
