--- a/TheLatteHelper/TheLatteHelper.entitlements
+++ b/TheLatteHelper/TheLatteHelper.entitlements
@@ -4,9 +4,11 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.aps-environment</key>
+	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.Canglong.GenshinPizzaHepler</string>
+		<string>iCloud.com.pizzastudio.TheLatteHelper</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -14,7 +16,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.Canglong.GenshinPizzaHepler</string>
+		<string>group.pizzastudio.TheLatteHelper</string>
 	</array>
 </dict>
 </plist>
