--- a/WatchExtension/LatteWatchAppExtension.entitlements
+++ b/WatchExtension/LatteWatchAppExtension.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.Canglong.GenshinPizzaHepler</string>
+		<string>iCloud.com.pizzastudio.TheLatteHelper</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -14,7 +14,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.Canglong.GenshinPizzaHepler</string>
+		<string>group.pizzastudio.TheLatteHelper</string>
 	</array>
 </dict>
 </plist>
