--- a/ThePizzaHelper/Info.plist
+++ b/ThePizzaHelper/Info.plist
@@ -52,7 +52,7 @@
 		<string>fetch</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
-	<false/>
+	<true/>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIImageName</key>
